--- a/about-us.html
+++ b/about-us.html
@@ -87,7 +87,7 @@
 				</div> <!-- end .container -->
 			</div>
 
-			<div class="page-title transparent" style="background-image: url('images/background01.jpg');">
+			<div class="page-title transparent" style="background-image: url('images/about_us.jpg');">
 				<div class="inner">
 					<h3>About Us</h3>
 				</div> <!-- end .inner -->
@@ -97,7 +97,7 @@
 					<span class="breadcrumbs-page-title">About Us</span>
 					<nav class="breadcrumbs-nav">
 						<ul>
-							<li><a href="">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>About Us</li>
 						</ul>
 					</nav> <!-- end .breadcrumbs-nav -->
@@ -117,16 +117,16 @@
 					<div class="heading text-center">
 						<h3>About Us</h3>
 						<hr class="line" />
-						<span>Know More About Our DrivePro</span>
+						<span>Know More About Master Driving School</span>
 					</div> <!-- end .heading -->
 					<div class="about">
 						<div class="left">
 							<h2>About Our Instructor</h2>
-							<p>DrivePro is the best driving school.We have well trained instructors.We offer affordable fee to our learners. DrivePro is the best driving school.</p>
+							<p>I’m a professional driver. The best drivers learn from a professional.  Learn how to drive safer and more efficiently. Make your road trips a breeze with the best driving school for beginners, students and professionals.<br><br>  Ready to pass your driving test? I’m here to help you to pass your driving test and get a full license. Forget the stress and worry of learning how to drive—we’ll give you the confidence, knowledge, and skills to get behind the wheel.</p>
 						</div> <!-- end .left -->
-						<div class="image" style="background-image: url('images/background04.jpg');">
+						<div class="image" style="background-image: url('images/aboutus_main_pic1.jpg');">
 							<div class="inner"></div>
-							<div class="about-icon"><div class="inner"><div class="text">Drive Pro</div></div></div>
+<!--							<div class="about-icon"><div class="inner"><div class="text">Master Driving School</div></div></div>-->
 							<div class="top-left"></div>
 							<div class="top-right"></div>
 							<div class="bottom-left"></div>
@@ -134,7 +134,7 @@
 						</div> <!-- end .image -->
 						<div class="right">
 							<h2>Who We Are</h2>
-							<p>DrivePro is the best driving school.We have well trained instructors.We offer affordable fee to our learners. DrivePro is the best driving school.</p>
+							<p>With Master Driving School, you’ll do more than just pass a test. We train lifelong safe and confident drivers. You learn everything you need to know, from road rules to driving responsibly at night and in the rain.</p>
 						</div> <!-- end .right -->
 					</div> <!-- end .about -->
 
@@ -148,84 +148,27 @@
 
 					<!-- Instructors -->
 					<div class="heading text-center">
-						<h3>Our Instrucotrs & Testers</h3>
+						<h3>Our Instructor</h3>
 						<hr class="line" />
-						<span>Top Instructors From Californina</span>
+						<span><b>RSA's Quality Approved Driving Instructor</b> for Carlow, Kilkenny & Laoise</span>
 					</div> <!-- end .heading -->
 					<div class="row">
-						<div class="col-sm-3">
+						<div class="col-sm-12">
 							<div class="instructor">
 								<div class="image">
 									<div class="inner">
-										<img src="images/instructor01.jpg" alt="alt text" class="img-responsive">
+										<img src="images/reduce_joseph.jpg" alt="alt text" class="img-responsive">
 									</div> <!-- end .inner -->
 								</div> <!-- end .image -->
 								<div class="bio">
-									<h5>Jason Lin</h5>
+									<h5>Joseph K Joseph</h5>
 									<span>Instructor</span>
 								</div> <!-- end .bio -->
 								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
-								</div> <!-- end .social-icons -->
-							</div> <!-- end .instructor -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="instructor">
-								<div class="image">
-									<div class="inner">
-										<img src="images/instructor02.jpg" alt="alt text" class="img-responsive">
-									</div> <!-- end .inner -->
-								</div> <!-- end .image -->
-								<div class="bio">
-									<h5>Wilson Jim</h5>
-									<span>Instructor</span>
-								</div> <!-- end .bio -->
-								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
-								</div> <!-- end .social-icons -->
-							</div> <!-- end .instructor -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="instructor">
-								<div class="image">
-									<div class="inner">
-										<img src="images/instructor03.jpg" alt="alt text" class="img-responsive">
-									</div> <!-- end .inner -->
-								</div> <!-- end .image -->
-								<div class="bio">
-									<h5>Eva Brown</h5>
-									<span>Tester</span>
-								</div> <!-- end .bio -->
-								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
-								</div> <!-- end .social-icons -->
-							</div> <!-- end .instructor -->
-						</div> <!-- end .col-sm-3 -->
-						<div class="col-sm-3">
-							<div class="instructor">
-								<div class="image">
-									<div class="inner">
-										<img src="images/instructor04.jpg" alt="alt text" class="img-responsive">
-									</div> <!-- end .inner -->
-								</div> <!-- end .image -->
-								<div class="bio">
-									<h5>Martin Gil</h5>
-									<span>Instructor</span>
-								</div> <!-- end .bio -->
-								<div class="social-icons blue">
-									<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-									<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
+									<div class="social-icon"><a href="https://www.facebook.com/profile.php?id=100089476627037"><i class="fa fa-facebook"></i></a></div>
+									<div class="social-icon"><a href="https://instagram.com/masterdrivingschool.ie?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></div>
+									<div class="social-icon"><a href="https://api.whatsapp.com/send?phone=%2B353873206963&app=facebook&entry_point=page_cta&fbclid=IwAR0S56Y9G8kRLUN9rTW8NoKBMtx_k-aCOW4h5f2A12L2hEFMrv5HA4HeJ-w"><i class="fa fa-whatsapp"></i></a></div>
+									<div class="social-icon"><a href="https://www.linkedin.com/services/page/a28b23321204851685/"><i class="fa fa-linkedin"></i></a></div>
 								</div> <!-- end .social-icons -->
 							</div> <!-- end .instructor -->
 						</div> <!-- end .col-sm-3 -->
