--- a/contact-page.html
+++ b/contact-page.html
@@ -87,32 +87,32 @@
 				</div> <!-- end .container -->
 			</div>
 
-			<div class="page-title transparent" style="background-image: url('images/background01.jpg');">
+			<div class="page-title transparent" style="background-image: url('images/contact_us_image.jpg');">
 				<div class="inner">
-					<h3>Gallery</h3>
+					<h3>Contact</h3>
 				</div> <!-- end .inner -->
 			</div> <!-- end .page-title -->
 			<div class="breadcrumbs">
 				<div class="container">
-					<span class="breadcrumbs-page-title">Gallery</span>
+					<span class="breadcrumbs-page-title">Contact</span>
 					<nav class="breadcrumbs-nav">
 						<ul>
-							<li><a href="">Home</a></li>
-							<li>Gallery</li>
+							<li><a href="index.html">Home</a></li>
+							<li>Contact</li>
 						</ul>
 					</nav> <!-- end .breadcrumbs-nav -->
 				</div> <!-- end .container -->
 			</div> <!-- end .breadcrumbs -->
-		</header> <!-- end .header -->
+		</header> <!-- copy end .header -->
 
 
 		<div class="responsive-menu">
 			<a href="" class="responsive-menu-close">Close <i class="fa fa-times"></i></a>
 			<nav class="responsive-nav"></nav> <!-- end .responsive-nav -->
-		</div> <!-- end .responsive-menu -->
+		</div> <!-- copy end .responsive-menu -->
 
 		<!-- Contact -->
-		<div class="full-width-map" id="full-width-map"></div>
+		<div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=carlow+()&amp;t=&amp;z=9&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/distance-area-calculator.html">measure distance on map</a></iframe></div>
 		<section class="section yellow text-center">
 			<div class="inner">
 				<div class="container-fluid">
@@ -123,27 +123,24 @@
 							<div class="col-sm-4">
 								<div class="contact">
 									<div class="icon"><i class="fa fa-map-marker"></i></div>
-									<div class="inner">Detach Driving Design Street Australia</div>
+									<div class="inner">Master Driving School</div>
 								</div> <!-- end .contact -->
 							</div> <!-- end .col-sm-4 -->
 							<div class="col-sm-4">
 								<div class="contact">
 									<div class="icon"><i class="fa fa-phone"></i></div>
-									<div class="inner">+123 456 789 001</div>
+									<div class="inner"><a href="tel:+353873206963">0873206963</a></div>
 								</div> <!-- end .contact -->
-								<div class="contact">
-									<div class="icon"><i class="fa fa-fax"></i></div>
-									<div class="inner">987 654 3210</div>
-								</div> <!-- end .contact -->
+
 							</div> <!-- end .col-sm-4 -->
 							<div class="col-sm-4">
 								<div class="contact">
 									<div class="icon"><i class="fa fa-envelope"></i></div>
-									<div class="inner">driving@test.com</div>
+									<div class="inner"><a href="mailto:k.joseph007@gmail.com">k.joseph007@gmail.com</a></div>
 								</div> <!-- end .contact -->
 							</div> <!-- end .col-sm-4 -->
 						</div> <!-- end .row -->
-						<a href=""><i class="fa fa-chevron-right"></i> Route</a>
+<!--						<a href=""><i class="fa fa-chevron-right"></i> Route</a>-->
 					</div> <!-- end .contacts -->
 					<h2 class="contact-heading">Send Us A Message</h2>
 				</div> <!-- end .container -->
@@ -154,7 +151,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
-							<form action="scripts/contact.php" method="post" id="contact-form">
+							<form action="https://formspree.io/f/xnqygzdr" method="POST" id="contact-form">
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="form-group">
@@ -190,17 +187,7 @@
 								</div>
 								<div id="contact-loading" class="alert alert-info form-alert">
 									<span class="icon"><i class="fa fa-info"></i></span>
-									<span class="message">Loading...</span>
-									<button type="button" class="close" data-hide="alert" aria-label="Close"><i class="fa fa-times"></i></button>
-								</div>
-								<div id="contact-success" class="alert alert-success form-alert">
-									<span class="icon"><i class="fa fa-check"></i></span>
-									<span class="message">Success!</span>
-									<button type="button" class="close" data-hide="alert" aria-label="Close"><i class="fa fa-times"></i></button>
-								</div>
-								<div id="contact-error" class="alert alert-danger form-alert">
-									<span class="icon"><i class="fa fa-times"></i></span>
-									<span class="message">Error!</span>
+									<span class="message">Loading... Emailed Successfully</span>
 									<button type="button" class="close" data-hide="alert" aria-label="Close"><i class="fa fa-times"></i></button>
 								</div>
 							</form>
@@ -281,7 +268,7 @@
 				</div> <!-- end .row -->
 				<div class="copyright">&copy; 2015 DrivePro All Rights Reserved.</div>
 			</div> <!-- end .container -->
-		</footer> <!-- end .footer -->
+		</footer> <!-- copy end .footer -->
 
 		<!-- jQuery -->
 		<script src="js/jquery-1.11.2.min.js"></script>
