--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,7 @@
 				</div> <!-- end .container -->
 			</div>
 
-			<div class="page-title transparent" style="background-image: url('images/background01.jpg');">
+			<div class="page-title transparent" style="background-image: url('images/gallery_image.jpg');">
 				<div class="inner">
 					<h3>Gallery</h3>
 				</div> <!-- end .inner -->
@@ -97,7 +97,7 @@
 					<span class="breadcrumbs-page-title">Gallery</span>
 					<nav class="breadcrumbs-nav">
 						<ul>
-							<li><a href="">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>Gallery</li>
 						</ul>
 					</nav> <!-- end .breadcrumbs-nav -->
@@ -113,50 +113,47 @@
 		<section class="section white">
 			<div class="inner">
 				<div class="container">
-
 					<!-- Gallery -->
 					<div class="heading text-center">
 						<h3>Gallery</h3>
 						<hr class="line" />
-						<span>Pass Results</span>
+						<span>Latest Pass Results</span>
 					</div> <!-- end .heading -->
 					<div class="gallery clearfix">
-						<div class="image">
-							<img src="images/gallery01.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery01.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
+						<div class="image overlay popup-link">
+							<a href="images/gallery01.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery01.png" alt="alt" class="img-responsive" >
+							</a>
 						</div>
-						<div class="image">
-							<img src="images/gallery02.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery02.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
+						<div class="image overlay popup-link">
+							<a href="images/gallery02.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery02.png" alt="alt" class="img-responsive" >
+							</a>
 						</div>
-						<div class="image">
-							<img src="images/gallery03.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery03.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
+						<div class="image overlay popup-link">
+							<a href="images/gallery03.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery03.png" alt="alt" class="img-responsive" >
+							</a>
 						</div>
-						<div class="image">
-							<img src="images/gallery04.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery04.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
-						</div>
-						<div class="image">
-							<img src="images/gallery05.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery05.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
-						</div>
-						<div class="image">
-							<img src="images/gallery06.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery06.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
-						</div>
+
+<!--						<div class="image">-->
+<!--							<img src="images/gallery04.jpg" alt="alt" class="img-responsive">-->
+<!--							<div class="overlay"></div>-->
+<!--							<a href="images/gallery04.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>-->
+<!--							<a href="" class="full-link"><i class="fa fa-link"></i></a>-->
+<!--						</div>-->
+<!--						<div class="image">-->
+<!--							<img src="images/gallery05.jpg" alt="alt" class="img-responsive">-->
+<!--							<div class="overlay"></div>-->
+<!--							<a href="images/gallery05.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>-->
+<!--							<a href="" class="full-link"><i class="fa fa-link"></i></a>-->
+<!--						</div>-->
+<!--						<div class="image">-->
+<!--							<img src="images/gallery06.jpg" alt="alt" class="img-responsive">-->
+<!--							<div class="overlay"></div>-->
+<!--							<a href="images/gallery06.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>-->
+<!--							<a href="" class="full-link"><i class="fa fa-link"></i></a>-->
+<!--						</div>-->
 					</div> <!-- end .gallery -->
 
 				</div> <!-- end .container -->
