--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<header class="header">
 
 			<div class="container clearfix">
-				<div class="logo"><a href="index.html"><img src="images/logo2.jpeg" alt="Drive Pro"></a></div>
+				<div class="logo"><a href="index.html"><img src="images/logo_mds.png" alt="Drive Pro"></a></div>
 				<div class="header-contacts">
 					<div class="header-contact">
 						<div class="small-round-icon"><i class="fa fa-map-marker"></i></div>
@@ -97,32 +97,32 @@
 		<!-- Home Slider -->
 		<div id="homeslider" class="flexslider homeslider">
 			<div class="slides">
-				<div style="background-image: url('images/slider04.jpg');">
+				<div style="background-image: url('images/index_slider_3.jpg');">
 					<div class="caption blue">
-						<h4>Learn Safe and Get Your License</h4>
-						<p>DrivePro is the best driving school. We have very well trained instructors.</p>
-						<p><a href="">Find Out More <i class="fa fa-angle-double-right"></i></a></p>
+						<h4>Learn to Drive with Confidence </h4>
+						<p>Your driving school with the most affordable prices in town. We are a driving school that strives to make your driving experience fun and enjoyable.</p>
+						<p></p>
 					</div> <!-- end .caption -->
 				</div>
-				<div style="background-image: url('images/slider01.jpg');">
+				<div style="background-image: url('images/index_slider_4.jpg');">
 					<div class="caption blue">
-						<h4>Lorem ipsum Esse magna et id nulla sint ad commodo ex in quis dolore</h4>
-						<p>Lorem ipsum Enim officia mollit mollit et cillum esse.</p>
-						<p><a href="">Find Out More <i class="fa fa-angle-double-right"></i></a></p>
+						<h4>Flexible Timings to suite your work/college hours </h4>
+						<p>Door to Door service. We pick and Drop from your preferred location.</p>
+						<p></p>
 					</div> <!-- end .caption -->
 				</div>
-				<div style="background-image: url('images/slider02.jpg');">
+				<div style="background-image: url('images/index_slider_2.jpg');">
 					<div class="caption blue">
-						<h4>Lorem ipsum Dolore ut</h4>
-						<p>Lorem ipsum Veniam voluptate irure laborum dolore minim deserunt mollit sed laboris.</p>
-						<p><a href="">Find Out More <i class="fa fa-angle-double-right"></i></a></p>
+						<h4>Experienced Trainer</h4>
+						<p>Quality driver training through one-on-one practical teaching. Our experienced, polite and RSA’s Quality Approved driving instructor will design every driving lessons to meet individual requirements and increase driving skills without compromising the quality, experience and price.</p>
+<!--						<p></p>-->
 					</div> <!-- end .caption -->
 				</div>
-				<div style="background-image: url('images/slider03.jpg');">
+				<div style="background-image: url('images/index_slider_1.jpg');">
 					<div class="caption blue">
-						<h4>Lorem ipsum Do laborum labore</h4>
-						<p>Lorem ipsum Anim id fugiat magna sed enim ullamco incididunt occaecat veniam in ea.</p>
-						<p><a href="">Find Out More <i class="fa fa-angle-double-right"></i></a></p>
+						<h4>Excellent first time Pass Rate.</h4>
+						<p>It doesn’t matter if you’re a beginner or veteran driver, Master driving school can help you pass your full test and get your license!</p>
+						<p></p>
 					</div> <!-- end .caption -->
 				</div>
 			</div> <!-- end .slides -->
@@ -239,7 +239,9 @@
 								</div> <!-- end .bio -->
 								<div class="social-icons blue">
 									<div class="social-icon"><a href="https://www.facebook.com/profile.php?id=100089476627037"><i class="fa fa-facebook"></i></a></div>
+									<div class="social-icon"><a href="https://instagram.com/masterdrivingschool.ie?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></div>
 									<div class="social-icon"><a href="https://api.whatsapp.com/send?phone=%2B353873206963&app=facebook&entry_point=page_cta&fbclid=IwAR0S56Y9G8kRLUN9rTW8NoKBMtx_k-aCOW4h5f2A12L2hEFMrv5HA4HeJ-w"><i class="fa fa-whatsapp"></i></a></div>
+									<div class="social-icon"><a href="https://www.linkedin.com/services/page/a28b23321204851685/"><i class="fa fa-linkedin"></i></a></div>
 								</div> <!-- end .social-icons -->
 							</div> <!-- end .instructor -->
 						</div> <!-- end .col-sm-3 -->
@@ -315,7 +317,7 @@
 			</div> <!-- end .inner -->
 		</section> <!-- end .section -->
 
-		<section class="section transparent blue" style="background-image: url('images/background02.jpg');">
+		<section class="section transparent blue" style="background-image: url('images/index_trustedby.jpg');">
 			<div class="inner">
 				<div class="container">
 
@@ -328,7 +330,7 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="testimonial clearfix">
-								<div class="testimonial-image"><div class="inner"><img src="images/testimonial01.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
+								<div class="testimonial-image"><div class="inner"><img src="images/image_1_index.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
 									<h5>Robin Joseph</h5>
@@ -338,7 +340,7 @@
 						</div> <!-- end .col-sm-6 -->
 						<div class="col-sm-6">
 							<div class="testimonial clearfix">
-								<div class="testimonial-image"><div class="inner"><img src="images/testimonial02.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
+								<div class="testimonial-image"><div class="inner"><img src="images/image_3_index.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
 									<h5>Jacintha Lobo</h5>
@@ -350,21 +352,21 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="testimonial clearfix">
-								<div class="testimonial-image"><div class="inner"><img src="images/testimonial03.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
+								<div class="testimonial-image"><div class="inner"><img src="images/image_2_index.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
-									<h5>Dwayne Johnson</h5>
+									<h5>Bibin Mani</h5>
 									<p>I had a few lessons with Joseph in preparation for my full test which I passed with flying colours. Thanks to his teaching and pointers, driving has become a lot less daunting. Definitely recommend him as an Instructor.</p>
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
 						<div class="col-sm-6">
 							<div class="testimonial clearfix">
-								<div class="testimonial-image"><div class="inner"><img src="images/testimonial04.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
+								<div class="testimonial-image"><div class="inner"><img src="images/index_image_5.jpg" alt="alt text" class="img-responsive"></div></div> <!-- end .testimonial-image -->
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
-									<h5>Chris Evans</h5>
-									<p>Lorem ipsum Consequat ut dolor Duis ut minim eiusmod reprehenderit proident. Lorem ipsum Duis ut sunt nisi fugiat incididunt Duis ea adipisicing dolor nulla sint et.</p>
+									<h5>Shinto Jose</h5>
+									<p>Joseph is a fantastic instructor who was with me all the way from steering the wheel for the first time all the way up to passing my driver’s test. He is a very knowledgeable instructor who gives you so much more than just skills needed to pass the test.</p>
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
@@ -390,7 +392,7 @@
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
-											<span>$200</span>
+											<span>€200</span>
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
@@ -416,7 +418,7 @@
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
-											<span>$350</span>
+											<span>€350</span>
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
@@ -442,7 +444,7 @@
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
-											<span>$400</span>
+											<span>€400</span>
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
@@ -468,7 +470,7 @@
 								<div class="inner">
 									<div class="pricing-table-price">
 										<div class="inner">
-											<span>$400</span>
+											<span>€400</span>
 										</div> <!-- end .inner -->
 									</div> <!-- end .pricing-table-price -->
 									<div class="pricing-table-heading">
