--- a/about-us.html
+++ b/about-us.html
@@ -190,41 +190,20 @@
 						<span>We Provide Well Maintained Vehicles For Our Learners</span>
 					</div> <!-- end .heading -->
 					<div class="gallery clearfix">
-						<div class="image">
-							<img src="images/gallery01.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery01.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
+						<div class="image overlay popup-link">
+							<a href="images/gallery03.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery03.png" alt="alt" class="img-responsive" >
+							</a>
 						</div>
-						<div class="image">
-							<img src="images/gallery02.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery02.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
+						<div class="image overlay popup-link">
+							<a href="images/gallery03.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery03.png" alt="alt" class="img-responsive" >
+							</a>
 						</div>
-						<div class="image">
-							<img src="images/gallery03.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery03.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
-						</div>
-						<div class="image">
-							<img src="images/gallery04.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery04.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
-						</div>
-						<div class="image">
-							<img src="images/gallery05.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery05.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
-						</div>
-						<div class="image">
-							<img src="images/gallery06.jpg" alt="alt" class="img-responsive">
-							<div class="overlay"></div>
-							<a href="images/gallery06.jpg" class="popup-link" data-lightbox-gallery="gallery1"><i class="fa fa-search"></i></a>
-							<a href="" class="full-link"><i class="fa fa-link"></i></a>
+						<div class="image overlay popup-link">
+							<a href="images/gallery03.png" data-lightbox-gallery="gallery1">
+								<img src="images/gallery03.png" alt="alt" class="img-responsive" >
+							</a>
 						</div>
 					</div> <!-- end .gallery -->
 					
