--- a/contact-page.html
+++ b/contact-page.html
@@ -123,7 +123,7 @@
 							<div class="col-sm-4">
 								<div class="contact">
 									<div class="icon"><i class="fa fa-map-marker"></i></div>
-									<div class="inner">Master Driving School</div>
+									<div class="inner"><B style="color:#000;">Master Driving School</B></div>
 								</div> <!-- end .contact -->
 							</div> <!-- end .col-sm-4 -->
 							<div class="col-sm-4">
@@ -151,7 +151,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-10 col-sm-offset-1">
-							<form action="https://formspree.io/f/xnqygzdr" method="POST" id="contact-form">
+							<form action="https://formspree.io/f/xdovwlew" method="POST" id="contact-form">
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="form-group">
@@ -167,11 +167,18 @@
 											<input type="email" id="contact-email" name="contact-email" class="form-with-icon" />
 										</div>
 									</div>
+<!--									<div class="col-sm-12">-->
+<!--										<div class="form-group">-->
+<!--											<label for="contact-number">Contact Number</label>-->
+<!--											<span class="form-icon"><i class="fa fa-phone "></i></span>-->
+<!--											<input type="tel" id="contact-number" name="contact-number" class="form-with-icon" />-->
+<!--										</div>-->
+<!--									</div>-->
 									<div class="col-sm-12">
 										<div class="form-group">
-											<label for="contact-subject">Subject</label>
-											<span class="form-icon"><i class="fa fa-tag"></i></span>
-											<input type="text" id="contact-subject" name="contact-subject" class="form-with-icon" />
+											<label for="contact-subject">Contact Number</label>
+											<span class="form-icon"><i class="fa fa-phone"></i></span>
+											<input type="tel" id="contact-subject" name="contact-subject" class="form-with-icon" />
 										</div>
 									</div>
 									<div class="col-sm-12">
