--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 			</div> <!-- end .inner -->
 		</section> <!-- end .section -->
 
-		<section class="section transparent blue" style="background-image: url('images/index_trustedby.jpg');">
+		<section class="section transparent blue" style="background-image: url('images/index_trustedby.jpg ');">
 			<div class="inner">
 				<div class="container">
 
@@ -334,7 +334,8 @@
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
 									<h5>Robin Joseph</h5>
-									<p>Passed my test today with flying colours, finally got my full licence. I am greatly appreciated for having Mr. Joseph as my instructor, he's very thoughtful and also meticulous, something that really gave me an edge while doing my test today.</p>
+									<p>Joseph is a fantastic instructor who was with me all the way from steering the wheel for the first time all the way up to passing my driver’s test. He is a very knowledgeable instructor who gives you so much more than just skills needed to pass the test.</p>
+
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
@@ -366,7 +367,7 @@
 								<div class="testimonial-body">
 									<span class="quote-icon"><i class="fa fa-quote-right"></i></span>
 									<h5>Shinto Jose</h5>
-									<p>Joseph is a fantastic instructor who was with me all the way from steering the wheel for the first time all the way up to passing my driver’s test. He is a very knowledgeable instructor who gives you so much more than just skills needed to pass the test.</p>
+									<p>Passed my test today with flying colours, finally got my full licence. I am greatly appreciated for having Mr. Joseph as my instructor, he's very thoughtful and also meticulous, something that really gave me an edge while doing my test today.</p>
 								</div> <!-- end .testimonial-body -->
 							</div> <!-- end .testimonial -->
 						</div> <!-- end .col-sm-6 -->
@@ -566,31 +567,32 @@
 			<br/><br/>
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-3">
+					<div class="col-sm-4">
 						<div class="widget">
 							<h5>About</h5>
 							<p>DrivePro is the best driving school. We have well trained instructors. DrivePro is the best driving school.</p>
 							<div class="social-icons">
-								<div class="social-icon"><a href=""><i class="fa fa-facebook"></i></a></div>
-								<div class="social-icon"><a href=""><i class="fa fa-twitter"></i></a></div>
-								<div class="social-icon"><a href=""><i class="fa fa-linkedin"></i></a></div>
-								<div class="social-icon"><a href=""><i class="fa fa-google-plus"></i></a></div>
+								<div class="social-icon"><a href="https://www.facebook.com/profile.php?id=100089476627037"><i class="fa fa-facebook"></i></a></div>
+									<div class="social-icon"><a href="https://instagram.com/masterdrivingschool.ie?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a></div>
+									<div class="social-icon"><a href="https://api.whatsapp.com/send?phone=%2B353873206963&app=facebook&entry_point=page_cta&fbclid=IwAR0S56Y9G8kRLUN9rTW8NoKBMtx_k-aCOW4h5f2A12L2hEFMrv5HA4HeJ-w"><i class="fa fa-whatsapp"></i></a></div>
+									<div class="social-icon"><a href="https://www.linkedin.com/services/page/a28b23321204851685/"><i class="fa fa-linkedin"></i></a></div>
+
 							</div> <!-- end .social-icons -->
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-3 -->
 					<div class="col-sm-2 col-sm-offset-1">
 						<div class="widget">
-							<h5>Categories</h5>
+							<h5>Pages</h5>
 							<ul class="list-unstyled">
-								<li><a href="">Driving</a></li>
-								<li><a href="">Exam</a></li>
-								<li><a href="">Instruction</a></li>
-								<li><a href="">Instructor</a></li>
-								<li><a href="">License</a></li>
+								<li><a href="">Home </a></li>
+								<li><a href="">Gallery</a></li>
+								<li><a href="">Contact Us</a></li>
+								<li><a href=""></a>About Us</li>
+								<li><a href="">RSA Approved</a></li>
 							</ul>
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-2 -->
-					<div class="col-sm-3">
+					<div class="col-sm-4">
 						<div class="widget">
 							<h5>Latest Post</h5>
 							<div class="latest-post clearfix">
@@ -616,21 +618,9 @@
 							</div> <!-- end .latest-post -->
 						</div> <!-- end .widget -->
 					</div> <!-- end .col-sm-3 -->
-					<div class="col-sm-3">
-						<div class="widget">
-							<h5>Flickr</h5>
-							<div class="flickr clearfix">
-								<a href=""><img src="images/flickr01.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr02.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr03.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr04.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr05.jpg" alt="alt" class="img-responsive"></a>
-								<a href=""><img src="images/flickr06.jpg" alt="alt" class="img-responsive"></a>
-							</div>
-						</div> <!-- end .widget -->
-					</div> <!-- end .col-sm-3 -->
+
 				</div> <!-- end .row -->
-				<div class="copyright">&copy; 2015 DrivePro All Rights Reserved.</div>
+				<div class="copyright">&copy; 2023 Master Driving School All Rights Reserved.</div>
 			</div> <!-- end .container -->
 		</footer> <!-- end .footer -->
 
